# routes/api.php
@@ -2,6 +2,7 @@
 
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
+use App\Http\Middleware\Localization;
 use App\Http\Controllers\Api\v1\PageController;
 use App\Http\Controllers\Api\v1\CallbackController;
 
@@ -9,18 +10,19 @@ use App\Http\Controllers\Api\v1\CallbackController;
 //    return $request->user();
 //})->middleware('auth:sanctum');
 
-Route::prefix('/page')->group(function () {
-    Route::apiResource('/{locale}', PageController::class)
-        ->only([
-            'index',
-        ])->names([
-            'page.index'
-        ]);
+Route::middleware([Localization::class])
+    ->prefix('/page')->group(function () {
+        Route::apiResource('/', PageController::class)
+            ->only([
+                'index',
+            ])->names([
+                'page.index'
+            ]);
 
-    Route::apiResource('/callback', CallbackController::class)
-        ->only([
-            'store',
-        ])->names([
-            'page.store'
-        ]);
-});
+        Route::apiResource('/callback', CallbackController::class)
+            ->only([
+                'store',
+            ])->names([
+                'page.store'
+            ]);
+    });
