# storage/api-docs/api-docs.json
@@ -66,7 +66,7 @@
                 }
             }
         },
-        "/api/v1/page/{lang}": {
+        "/api/v1/page": {
             "get": {
                 "tags": [
                     "Страница"
@@ -74,18 +74,6 @@
                 "summary": "Получение страницы",
                 "description": "Получение страницы",
                 "operationId": "page.index",
-                "parameters": [
-                    {
-                        "name": "lang",
-                        "in": "path",
-                        "description": "язык страницы",
-                        "required": true,
-                        "schema": {
-                            "type": "string",
-                            "example": "ru"
-                        }
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "Success",
